--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .AppleDouble
 .LSOverride
 GoogleService-Info.plist
+APIKey.plist
 
 # Icon must end with two \r
 Icon
@@ -38,6 +39,7 @@ Objective-C.gitignore & Swift.gitignore
 
 ## User settings
 xcuserdata/
+.plist
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting 
 Xcode 9)
