--- a/SentiMate/Info.plist
+++ b/SentiMate/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>ChenYuluoyan-Thin.ttf</string>
+		<string>jf-openhuninn-2.0</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
