--- a/SentiMate.xcodeproj/xcshareddata/xcschemes/SentiMate.xcscheme
+++ b/SentiMate.xcodeproj/xcshareddata/xcschemes/SentiMate.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "052709D02BFADF5D000959C5"
+               BuildableName = "SentiMateTests.xctest"
+               BlueprintName = "SentiMateTests"
+               ReferencedContainer = "container:SentiMate.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
